--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@primevue/themes": "^4.0.7",
     "pinia": "^2.1.7",
     "pocketbase": "^0.21.5",
+    "primeicons": "^7.0.0",
     "primevue": "^4.0.7",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
